<resources>
    <string name="app_name">Eventia</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- Spinner Item-->
    <string-array name="city">
        <item name="INDORE">INDORE</item>
        <item name="BANGALORE">BANGALORE</item>
        <item name="UJJAIN">UJJAIN</item>
    </string-array>


    <string-array name="category">
        <item name="edu">Education and Tech</item>
        <item name="sports">Sports and Fitness</item>
        <item name="travel">Travel and Adventure</item>
        <item name="hobby">Hobbies and Crafts</item>
    </string-array>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Eventia now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="activity_name">Activity Name</string>
    <string name="activity_catagory">Catagorie</string>
    <string name="activity_date">Date(dd/mm/yyyy)</string>
    <string name="activity_time">Time(hh:mm)</string>
    <string name="activity_description">Description</string>
    <string name="create_activity_btn">Create</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
